# rs-weather-cli

./: Cargo.toml  README.md
src/: cli.rs  favorite_city.rs  main.rs  weather_types.rs
